Install ELK in Windows.